# apps

./: .gitignore  CMakeLists.txt  README.md  buffers.h  client.cpp  client.cu  client_grpc.cpp  executor.cu  executor.h  generator-verbs.cu  generator.cu  grpc.h  include_all.h  network.cpp  network.h  parallel_profiler.cu  rdma_from_gpu.proto  utils.h  verbs.cu  worker.cu  worker_grpc.cpp
